--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.20.7",
-    "axios": "^1.11.0",
+    "axios": "^1.13.2",
     "framer-motion": "^12.18.1",
     "lucide-react": "^0.542.0",
-    "next": "15.3.3",
+    "next": "^15.5.9",
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
